actualizando vista de Pacientes, agregando funcionalidad a boton editar

--- a/ClinicaOdontologica/src/main/resources/application.properties
+++ b/ClinicaOdontologica/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ClinicaOdontologica
 spring.h2.console.enable=true
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:BD_clinicaOdontologica
+spring.datasource.url=jdbc:h2:file:/home/hackj/Digital-House/Backend1/ClinicaOdontologica/BD/BD_clinicaOdontologica
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.show-sql=true
