--- a/ClinicaOdontologica/src/main/resources/application.properties
+++ b/ClinicaOdontologica/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.url=jdbc:h2:file:/home/hackj/Digital-House/Backend1/ClinicaOdo
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
