--- a/ClinicaOdontologica/src/main/resources/application.properties
+++ b/ClinicaOdontologica/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.springframework.security=DEBUG
